src/main/java/com/example/Delivery/Members/Error/NotFoundException.java
package com.example.Delivery.Members.Error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
